one more section

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,6 +1,22 @@
+body{
+  background-color: #111111;
+}
 @font-face {
   font-family: beon;
   src: url(../fonts/Beon.otf);
+}
+
+@font-face {
+  font-family: Neonblitz;
+  src: url(../fonts/Neonblitz-rgYVy.ttf);
+}
+@font-face {
+  font-family:Space-Grotesk-bold ;
+  src: url(../fonts/SpaceGrotesk-Bold.otf);
+}
+@font-face {
+  font-family:Space-Grotesk-regular;
+  src: url(../fonts/SpaceGrotesk-Regular.otf);
 }
 
 /* navbar start */
@@ -23,11 +39,15 @@
 .top-navbar .navbar .nav-link:hover{
   color: #FFCDFE;
 }
+.navbar-toggler{
+  background-color: #FFCDFE;
+}
 
 /* navbar end */
 .header-banner{
-  position: absolute;
-  top: 0;
+  /* position: absolute; */
+  /* top: 0; */
+  margin-top: -100px;
   background: radial-gradient(50% 50% at 50% 50%, rgba(63, 243, 255, 0.6) 0%, rgba(0, 0, 0, 0.6) 100%);
 }
 .dragen-logo{
@@ -79,6 +99,175 @@
     -ms-border-radius:45%;
     -o-border-radius:45%;
 }
+
+
+/* section two start here */
+
+.degen-two .outer{
+  position: relative;
+  margin-top: 100px;
+  background-image: url("../images/degen2-bg.png");
+  background-size: cover;
+  background-position: center;
+  height: 950px;
+}
+.degen-two .outer .play-now{
+  position: absolute;
+  top: -56px;
+  left: 39%;
+  background-color: #111111;
+}
+.degen-two .outer .play-now h2{
+  font-family: Neonblitz;
+  font-size: 60px;
+  color: #fff;
+  border: 8px solid #E12AC9;
+  padding: 20px;
+  width: 450px;
+  border-radius: 12px;
+  -webkit-border-radius: 12px;
+  -moz-border-radius: 12px;
+  -ms-border-radius: 12px;
+  -o-border-radius: 12px;
+}
+.degen-two .outer .cards-section{
+  position: absolute;
+  top: 22%;
+  left: 14%;
+}
+.degen-two .outer .cards-section .card{
+  background-color: #111111;
+  border-radius: 20px;
+  -webkit-border-radius: 20px;
+  -moz-border-radius: 20px;
+  -ms-border-radius: 20px;
+  -o-border-radius: 20px;
+}
+.degen-two .outer .cards-section .card-title{
+  color: #3FF3FF;
+  font-family: Space-Grotesk-bold;
+  font-size: 24px;
+}
+.degen-two .outer .cards-section .card-text{
+  font-family: Space-Grotesk-regular;
+  color: #fff;
+  line-height: 18px;
+  font-size: 14px;
+}
+.degen-two .outer .cards-section .footer-title{
+  color: #FFCDFE;
+  font-family: beon;
+  font-size: 20px;
+}
+@media (max-width:999px){
+  .degen-two .outer{
+    background-image: none;
+    position: initial;
+    height: auto;
+  }
+  .degen-two .outer .cards-section .card{
+    border: 2px solid #FFCDFE;
+    border-radius: 5px;
+    -webkit-border-radius: 5px;
+    -moz-border-radius: 5px;
+    -ms-border-radius: 5px;
+    -o-border-radius: 5px;
+}
+.degen-two .outer .cards-section{
+  position: initial;
+  margin-top: 40px;
+}
+.degen-two .outer .play-now{
+  position: initial;
+  display: flex;
+  justify-content: center;
+}
+}
+@media (min-width:1000px) AND (max-width:1100px){
+  .degen-two .outer{
+    height: 550px;
+  }
+  .degen-two .outer .cards-section{
+    top: 22%;
+    left: 5%;
+  }
+  .degen-two .outer .play-now{
+    left: 30%;
+  }
+}
+@media (min-width:1100px) AND (max-width:1200px){
+  .degen-two .outer{
+    height: 585px;
+  }
+  .degen-two .outer .cards-section{
+    top: 22%;
+    left: 9%;
+  }
+  .degen-two .outer .play-now{
+    left: 31%;
+  }
+}
+@media (min-width:1200px) AND (max-width:1300px){
+  .degen-two .outer{
+    height: 632px;
+  }
+  .degen-two .outer .cards-section{
+    top: 22%;
+    left: 8%;
+    max-width: 1040px !important;
+  }
+  .degen-two .outer .play-now{
+    left: 34%;
+  }
+}
+@media (min-width:1300px) AND (max-width:1400px){
+  .degen-two .outer{
+    height: 682px;
+  }
+  .degen-two .outer .cards-section{
+    top: 22%;
+    left: 8%;
+  }
+  .degen-two .outer .play-now{
+    left: 35%;
+  }
+}
+@media (min-width:1400px) AND (max-width:1549px){
+  .degen-two .outer{
+    height: 710px;
+  }
+  .degen-two .outer .cards-section{
+    top: 22%;
+    left: 6%;
+    max-width: 1220px !important;
+  }
+  .degen-two .outer .play-now{
+    left: 36%;
+  }
+}
+@media(min-width:1550px) AND (max-width:1919px){
+  .degen-two .outer{
+    height: 870px;
+  }
+  .degen-two .outer .cards-section{
+    top: 22%;
+    left: 8%;
+  }
+}
+@media(min-width:1920px){
+  .degen-two .outer{
+    height: 1010px;
+  }
+}
+
+/* section two end here */
+
+
+
+
+
+
+
 @media (max-width:380px){
   .dragen-logo{
     width: 120px;
