--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -121,6 +121,11 @@ body {
   -ms-border-radius: 45%;
   -o-border-radius: 45%;
 }
+@media (max-width:768px){
+  .carousel-item img.w-100{
+    height: 600px !important;
+  }
+}
 
 
 /* section two start here */
@@ -571,7 +576,7 @@ body {
   }
 
   .carousel-caption {
-    bottom: 0rem !important;
+    bottom: 3rem !important;
   }
 }
 
