--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -323,6 +323,8 @@ body {
 
 /* section three start here */
 .degen-coming-soon {
+  margin-top: -80px;
+  z-index:-1;
   background-image: url("../images/degen3-bg.png");
   background-size: cover;
   background-position: center;
@@ -333,6 +335,7 @@ body {
 }
 
 .degen-coming-soon .comming-soon h2 {
+  margin-top: 40px;
   font-family: Neonblitz;
   font-size: 60px;
   color: #fff;
@@ -431,7 +434,7 @@ body {
 
 .counting-body {
   margin-top: 20px;
-  margin-left: 65px;
+  /* margin-left: 65px; */
 }
 
 /* section four start end */
